Fixed spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -81,7 +81,7 @@ body {
   font-weight: 600;
   font-size: 3.6rem;
   letter-spacing: -0.5px;
-  margin-bottom: 3.2rem;
+  margin-bottom: 2.4rem;
 }
 
 .features {
